# python-db-mcp

./: .gitignore  Dockerfile  README.md  example.py  pyproject.toml
src/python_db_mcp/: main.py
src/python_db_mcp/adapters/: base.py  mysql.py  postgres.py  redis.py  sqlite.py
src/python_db_mcp/core/: connection_manager.py  database_service.py
src/python_db_mcp/server/: http_server.py  mcp_server.py
src/python_db_mcp/utils/: masking.py  safety.py  schema.py
